# event_aggregator

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: event_aggregator.hpp
tests/: CMakeLists.txt  event_aggregator_tests.cpp
